# sella

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
NOTICE/: README
sella/: __init__.py  _gpu.py  aseopt.py  constraints.py  cython_routines.pyx  eigensolvers.py  force_match.pyx  geom.py  hessian_update.py  internal.py  internal_cython.pyx  irc.py  linalg.py  optimize.py  peswrapper.py  peswrapper2.py  samd.py  sella.py
sella/internal/: __init__.py  get_internal.py  int_classes.pxd  int_classes.pyx  int_eval.pxd  int_eval.pyx  int_find.pyx  int_find2.py
sella/optimize/: __init__.py  irc.py  optimize.py  restricted_step.py  stepper.py
sella/utilities/: blas.pxd  blas.pyx  math.pxd  math.pyx
tests/: test_cell_optimization.py  test_core_functionality.py  test_eigensolvers.py  test_hessian_update.py  test_linalg.py  test_peswrapper.py
tests/integration/: test_morse_cluster.py  test_tip3p_cluster.py  test_water_dimer.py
tests/internal/: test_get_internal.py
tests/test_utils/: poly_factory.py  test_poly_factory.py
tests/utilities/: math_wrappers.pyx  test_math.py
tests/utils/: __init__.py  matrix_factory.py  poly_factory.py
