[build-system]
requires = [
    "setuptools >= 54.2.0",
    "setuptools_scm >= 2.0.0, <3",
    "cython >= 0.29.23",
    "numpy",
    "scipy"
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = [
    # skip pypy
    "pp*",
    # skip 32-bit archs
    "*-win32",
    "*-manylinux_i686",
    # skip musllinux
    "*-musllinux*",
]
